test/compile-fail/resolution/conflicts/fn-mod-struct/expected.txt
error: the name `b` is defined multiple times
  ┌─ ./test/compile-fail/resolution/conflicts/fn-mod-struct/top.rhdl:1:4
  │
1 │ fn b() {}
  │    - previous definition of the name `b` here
2 │ mod b {}
3 │ struct b {}
  │        ^ `b` redefined here

